source/objects/SMS_Message__c.object
<CustomObject>
    <fields>
        <fullName>AccountSid__c</fullName>
        <label>AccountSid</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMS Message</relationshipLabel>
        <relationshipName>SMS_Message</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <description>Date the SMS was successfully sent.</description>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <description>Big field for dumping web service responses. Could be removed for production use.</description>
        <label>Debug</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <inlineHelpText>After clicking send this information will be sent to a SMS service provider but the message may still fail in delivery. Select a value to be notified on the status of this SMS message.</inlineHelpText>
        <label>Notification</label>
        <picklist>
            <picklistValues>
                <fullName>Failure</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sid__c</fullName>
        <label>Sid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Phone</type>
    </fields>
    <label>SMS Message</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{0}</displayFormat>
        <label>SMS Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Message</pluralLabel>
    <recordTypes>
        <fullName>Inbound</fullName>
        <active>true</active>
        <description>Record type inbound SMS messages.</description>
        <label>Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound</fullName>
        <active>true</active>
        <description>Record type for outbound SMS messages.</description>
        <label>Outbound</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>